<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_ids"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/material_button_flat_background_color_pressed_dark_theme"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/no_Data"
        android:id="@+id/image_no_data"
        android:layout_width="@dimen/image_width_no_data"
        android:layout_height="@dimen/image_height_no_data"
        android:src="@drawable/treat" />

    <TextView
        android:id="@+id/message_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_list_icon_first_position_margin_start"
        android:layout_marginRight="@dimen/material_list_icon_first_position_margin_start"
        android:layout_marginTop="@dimen/material_list_icon_first_position_margin_start"
        android:text="@string/no_data"
        android:textColor="@color/place_autocomplete_search_text"
        android:textSize="@dimen/material_typography_dense_title_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message_no_data_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_marign"
        android:text="@string/no_data_v2"
        android:textColor="@color/place_autocomplete_search_text"
        android:textSize="@dimen/material_typography_dense_title_text_size" />

</LinearLayout>