<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_cotanier_ms"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/Google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:src="@drawable/powered_by_google_light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:paddingBottom="4dp"
                    android:text="@string/privacy"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/location_Title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/Location_Title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="16dp"
                android:elevation="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/Loaction"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="32dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/Your_Home"
                    android:textSize="15sp"/>

                <ImageView
                    android:focusable="true"
                    android:id="@+id/add_loacation_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/add_loaction"
                    android:src="@drawable/ic_add_loaction" />

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/Location_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/material_card_edge_margin"
                android:elevation="8dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:elevation="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/location_text_display"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="72dp"
                        android:layout_weight="1"
                        android:text="@string/display_location_benfit"
                        android:textSize="15sp"
                        android:textColor="@color/material_color_black" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:layout_marginTop="16dp"
                        android:elevation="8dp">

                        <TextView
                            android:id="@+id/location_text_display2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="72dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/enable_Geo"
                            android:textSize="15sp"
                            android:textColor="@color/material_color_black" />

                        <Switch
                            android:focusable="true"
                            android:id="@+id/enable_switch_loaction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:layout_marginTop="16dp"
                        android:elevation="8dp">

                        <TextView
                            android:id="@+id/location_textaaa"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="72dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/Edit_loaction"
                            android:textSize="15sp"
                            android:textColor="@color/material_color_black" />


                        <ImageView
                            android:focusable="true"
                            android:id="@+id/edit_loacation_frag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="16dp"
                            android:src="@drawable/ic_edit_loaction" />
                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_re_fr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp" />


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

    </LinearLayout>

</ScrollView>