<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--ToolsBar For Title Of Treatment-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="16dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    <!--Continer Of EditText-->
    <LinearLayout
        android:id="@+id/add_reminder_layout_top"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_below="@+id/toolbar_add_reminder"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <!--Edit Text For Name OF Treatment-->
        <EditText
            android:id="@+id/reminder_title_add_reminder"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="16dp"
            android:gravity="top|start"
            android:hint="@string/add_reminder"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textColor="@android:color/white"
            android:textColorHint="@color/primary_text_disabled_material_dark"
            android:textSize="25sp"
            android:nextFocusDown="@+id/Note"/>

    </LinearLayout>

    <!--Main Continer-->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/add_reminder_layout_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Detail Text-->
            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/details"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <!--Note Row-->
            <RelativeLayout
                android:nextFocusDown="@+id/date"
                android:focusable="true"
                android:id="@+id/Note"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="pickNote">

                <ImageView
                    android:contentDescription="@string/note_de"
                    android:id="@+id/Note_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_note" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/Note_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Note_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Note"
                        android:textColor="@color/material_color_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_Note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        tools:text="Mariooooooooooo" />

                </LinearLayout>

            </RelativeLayout>
            <!--Date Row-->
            <RelativeLayout
                android:nextFocusDown="@+id/time"
                android:focusable="true"
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="ChooseDate">

                <ImageView
                    android:contentDescription="@string/dates_des"
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_view_day_grey600_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/date_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/material_color_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        tools:text="Mariooooooooooo" />

                </LinearLayout>

            </RelativeLayout>
            <!--Time Row-->
            <RelativeLayout
                android:focusable="true"
                android:nextFocusDown="@+id/repeat"
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="AddTime">

                <ImageView
                    android:contentDescription="@string/time_des"
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_access_time_grey600_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/time_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/material_color_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        tools:text="@string/app_name" />

                </LinearLayout>

            </RelativeLayout>
            <!--Repeat Row-->
            <RelativeLayout
                android:nextFocusDown="@+id/RepeatNo"
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <ImageView
                    android:contentDescription="@string/repate_mode"
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_sync_grey600_24dp" />

                <LinearLayout
                    android:focusable="true"

                    android:id="@+id/lasyoutout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textColor="@color/material_color_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        tools:text="@string/app_name" />

                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:onClick="onSwitchRepeat"
                    android:textOff="@string/repeat_off"
                    android:textOn="@string/repeat_on" />

            </RelativeLayout>

            <RelativeLayout
                android:focusable="true"
                android:nextFocusDown="@+id/RepeatType"

                android:id="@+id/RepeatNo"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setRepeatNo">

                <ImageView
                    android:contentDescription="@string/repetation_interval"
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_unfold_more_grey600_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_no_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_repeat_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:focusable="true"
                android:nextFocusDown="@+id/fab_turn_no_off"

                android:id="@+id/RepeatType"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="selectRepeatType">

                <ImageView
                    android:contentDescription="@string/Types_of_repetation"
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_subject_grey600_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_type_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type"
                        android:textColor="@color/material_color_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_repeat_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        tools:text="@string/repeat_off" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/add_reminder_layout_top"
        android:background="@drawable/toolbar_dropshadow" />


    <com.getbase.floatingactionbutton.FloatingActionButton
        android:contentDescription="@string/on_off"
        android:focusable="true"
        android:id="@+id/fab_turn_no_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:clickable="true"
        android:onClick="turnON"
        app:fab_size="normal"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/fab_pressed"
        fab:fab_icon="@drawable/ic_notifications_on_white_24dp" />

</RelativeLayout>